--- a/index.htm
+++ b/index.htm
@@ -189,7 +189,7 @@
         
         <div class="row-fluid title">
             <h1>tech stack</h1>
-            <h2>Peak behind the curtain...</h2>
+            <h2>Peek behind the curtain...</h2>
         </div>
         <div class="row-fluid" id="techstack">
 
