'Play Now!' button sends user to Amazon AWS instance

--- a/index.htm
+++ b/index.htm
@@ -172,7 +172,7 @@
 <div class="row-fluid "  id="subArea3">
     <div class="container ">
         <div class="row-fluid">
-        <a href="http://satellite-game.jit.su"><button class="btn btn-large">Play Now!</button></a>
+        <a href="app.satellite-game.com"><button class="btn btn-large">Play Now!</button></a>
         </div>
     </div>
 </div>
