Add links to personal sites for team members

--- a/index.htm
+++ b/index.htm
@@ -87,7 +87,7 @@
         </div>
         <div class="row-fluid"> 
             <!--Pitch-->
-            <div class="span3">
+            <div class="span2">
                 <table class="table">
                     <thead>
                         <tr>
@@ -102,7 +102,7 @@
                 </table>
             </div>
             <!--Roll-->
-            <div class="span3">
+            <div class="span2">
                 <table class="table">
                     <thead>
                         <tr>
@@ -117,7 +117,7 @@
                 </table>
             </div>
             <!--Yaw-->
-            <div class="span3">
+            <div class="span2">
                 <table class="table">
                     <thead>
                         <tr>
@@ -132,7 +132,7 @@
                 </table>
             </div>
             <!--Thrust-->
-            <div class="span3">
+            <div class="span2">
                 <table class="table">
                     <thead>
                         <tr>
@@ -144,19 +144,22 @@
                             <td class="price"><span>W<br>S</span></td>
                         </tr>
                     </tbody>
-            <!--Kill!-->
-  <!--           <div class="span3">
+                </table>
+            </div>
+            <!--Fire!-->
+            <div class="span2">
                 <table class="table">
                     <thead>
                         <tr>
-                            <th>Kill!</th>
+                            <th>Fire</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td class="price"><span>SpaceBar</span></td>
+                            <td class="price"><span>CLICK<br>SPACE</span></td>
                         </tr>
-                    </tbody> -->
+                    </tbody>
+                </table>
                 </table>
             </div>
         </div>
@@ -214,10 +217,10 @@
                     <h3>Three.js</h3>
                     <p>Used to create rich GPU-accelerated 3d animations written entirely in JavaScript without relying on proprietary browser plugins. WebGL is the future of client-side ui rendering, and thanks to Three.js, you can expierence it while playing Satellite, today.</p>
                 </div>
-                <!--Grunt.js-->
+                <!--Grunt-->
                 <div class="serv">
                     <div class="serv-img"> <img src="images/techstack/se2.png" alt="wordpress"> </div>
-                    <h3>Grunt.js</h3>
+                    <h3>Grunt</h3>
                     <p>Projects of this scope require robust, and consistent development, deployment, and production environments. Grunt allows us to streamline our workflow from start to finish.</p>
                 </div>
             </div>
@@ -229,10 +232,10 @@
                     <p>
                     Phsyijs allows Satellite to run its physics engine in a separate thread (via web workers) to avoid impacting in your application's performance and taking up your your 3D rendering time.</p>
                 </div>
-                <!--Pseudoclass.js-->
+                <!--Pseudoclass-->
                 <div class="serv">
                     <div class="serv-img"> <img src="images/techstack/se2.png" alt="wordpress"> </div>
-                    <h3>Pseudoclass.js</h3>
+                    <h3>Pseudoclass</h3>
                     <p>An OOP framework for Node.js and the browser. Emulating classical inheritence patterns in JavaScript isn't easy, but PseudoClass.js makes it a breeze by adding sweet syntactic sugar for prototypal inheritance.</p>
                 </div>
             </div>
@@ -264,28 +267,39 @@
         <div id="members" class="row-fluid"> 
             
             <!--====== Andrew Spade ======-->
-            <div class="team span3"> <img src="images/team/AndrewSpade.jpg" alt="image"  class="member_picture ">
-                <h3 class="member_name">Andrew Spade</h3>
-  
-                <p>Camera System, Environment Design, 3D Radar, Tactical Navigation Systems</p>
+            <div class="team span3"> 
+                <a href="http://about.me/a.spade" target="_blank">
+                    <img src="images/team/AndrewSpade.jpg" alt="image"  class="member_picture ">
+                    <h3 class="member_name">Andrew Spade</h3>
+                    <p>Camera System, Environment Design, 3D Radar, Tactical Navigation Systems</p>
+                </a>
             </div>
 
             <!--====== Gary Ryan ======-->
-            <div class="team span3"> <img src="images/team/GaryRyan.jpg" alt="image"  class="member_picture">
-                <h3  class="member_name">Gary Ryan</h3>
-                <p>Combat Mechanics, Weapon Design, Lighting, Particle Systems, Pyrotechnics.</p>
+            <div class="team span3"> 
+                <a href="http://www.linkedin.com/in/garytryan" target="_blank">
+                    <img src="images/team/GaryRyan.jpg" alt="image"  class="member_picture">
+                    <h3  class="member_name">Gary Ryan</h3>
+                    <p>Combat Mechanics, Weapon Design, Lighting, Particle Systems, Pyrotechnics.</p>
+                </a>
             </div>
-            
+
             <!--====== Felix Tripier ======-->
-            <div class="team span3"> <img src="images/team/FelixTrepier.jpg" alt="image"  class="member_picture">
-                <h3  class="member_name">Felix Tripier</h3>
-                <p>HUD, Flight Controls, Game Logic, Multiplayer Support, Audio Design</p>
+            <div class="team span3"> 
+                <a href="http://www.linkedin.com/pub/felix-tripier/70/2b/a35/" target="_blank">
+                    <img src="images/team/FelixTrepier.jpg" alt="image"  class="member_picture">
+                    <h3  class="member_name">Felix Tripier</h3>
+                    <p>HUD, Flight Controls, Game Logic, Multiplayer Support, Audio Design</p>
+                </a>
             </div>
 
             <!--====== Phillip Alexander ======-->
-            <div class="team span3"> <img src="images/team/PhillipAlexander.jpg" alt="image"  class="member_picture">
-                <h3  class="member_name">Phillip Alexander</h3>
-                <p>Team Lead, Client-Server Architecture, Build Automation, Website Design</p>
+            <div class="team span3"> 
+                <a href="http://phillipalexander.io" target="_blank">
+                    <img src="images/team/PhillipAlexander.jpg" alt="image"  class="member_picture">
+                    <h3  class="member_name">Phillip Alexander</h3>
+                    <p>Team Lead, Client-Server Architecture, Build Automation, Website Design</p>
+                </a>
             </div>
 
         </div>
