Remove white home button from navbar

--- a/index.htm
+++ b/index.htm
@@ -59,9 +59,9 @@
                 
                 <!-- Everything you want hidden at 940px or less, place within here -->
                 
-                <div class="nav-collapse collapse menu "> <a class="navbar-brand" href="#"><img src="http://placehold.it/300&amp;text=Home" alt="logo" class='logo'></a>
-                    <ul class="navigation  ">
-                        <li data-section="2"  data-toggle="collapse" data-target=".nav-collapse">Quickstart</li>
+                    <ul class="navigation">
+                        <li data-section="1" data-toggle="collapse" data-target=".nav-collapse">Home</li>
+                        <li data-section="2" data-toggle="collapse" data-target=".nav-collapse">Quickstart</li>
                         <li data-section="3" data-toggle="collapse" data-target=".nav-collapse">Tech Stack</li>
                         <li data-section="4" data-toggle="collapse" data-target=".nav-collapse">Team</li>
                     </ul>
