Fix typos in Tech Stack section

--- a/index.htm
+++ b/index.htm
@@ -230,13 +230,13 @@
                     <div class="serv-img"> <img src="images/techstack/se2.png" alt="wordpress"> </div>
                     <h3>Physijs</h3>
                     <p>
-                    Phsyijs allows Satellite to run its physics engine in a separate thread (via web workers) to avoid impacting in your application's performance and taking up your your 3D rendering time.</p>
+                    Phsyijs allows Satellite to run its physics engine in a separate thread (via web workers) to avoid impacting in your application's performance and taking up your our 3D rendering time.</p>
                 </div>
                 <!--Pseudoclass-->
                 <div class="serv">
                     <div class="serv-img"> <img src="images/techstack/se2.png" alt="wordpress"> </div>
                     <h3>Pseudoclass</h3>
-                    <p>An OOP framework for Node.js and the browser. Emulating classical inheritence patterns in JavaScript isn't easy, but PseudoClass.js makes it a breeze by adding sweet syntactic sugar for prototypal inheritance.</p>
+                    <p>An OOP framework for Node.js and the browser. Emulating classical inheritence patterns in JavaScript isn't easy, but Pseudoclass makes it a breeze by adding sweet syntactic sugar for prototypal inheritance.</p>
                 </div>
             </div>
         </div>
