--- a/index.htm
+++ b/index.htm
@@ -85,7 +85,7 @@
             <h1>Quickstart</h1>
             <h2>How to play</h2>
         </div>
-        <div class="row-fluid"> 
+        <div class="offset1 row-fluid"> 
             <!--Pitch-->
             <div class="span2">
                 <table class="table">
