--- a/index.htm
+++ b/index.htm
@@ -16,8 +16,10 @@
 
 <!--====== Google Analytics ======-->
 <script type="text/javascript">
-
   var _gaq = _gaq || [];
+  var pluginUrl = 
+   '//www.google-analytics.com/plugins/ga/inpage_linkid.js';
+  _gaq.push(['_require', 'inpage_linkid', pluginUrl]);
   _gaq.push(['_setAccount', 'UA-40336680-2']);
   _gaq.push(['_trackPageview']);
 
