feature: add play button to navigation bar

--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
                     <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </a>
 
                     <!-- Everything you want hidden at 940px or less, place within here -->
+                    <a href="http://app.satellite-game.com"><button class="btn btn-info">Play Now!</button></a>
 
-                        <ul class="navigation">
-                            <li data-section="1" data-toggle="collapse" data-target=".nav-collapse">Home</li>
-                            <li data-section="2" data-toggle="collapse" data-target=".nav-collapse">Quickstart</li>
-                            <li data-section="3" data-toggle="collapse" data-target=".nav-collapse">Tech Stack</li>
-                            <li data-section="4" data-toggle="collapse" data-target=".nav-collapse">Team</li>
-                        </ul>
+                    <ul class="navigation">
+                        <li data-section="1" data-toggle="collapse" data-target=".nav-collapse">Home</li>
+                        <li data-section="2" data-toggle="collapse" data-target=".nav-collapse">Quickstart</li>
+                        <li data-section="3" data-toggle="collapse" data-target=".nav-collapse">Tech Stack</li>
+                        <li data-section="4" data-toggle="collapse" data-target=".nav-collapse">Team</li>
+                    </ul>
 
                         <!-- .nav, .navbar-search, .navbar-form, etc -->
-                    </div>
                 </div>
             </div>
         </div>
