move application js to application.js folder. display HTML section comments left-aligned

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <!--
     ==================================
-                            Menu
+    Menu
     ==================================
     -->
     <div class="row-fluid">
@@ -76,7 +76,7 @@
 
     <!--
     ==================================
-                    THE WELCOME PAGE
+    Welcome page
     ==================================
     -->
 
@@ -92,7 +92,7 @@
 
     <!--
     ==================================
-                            ABOUT
+    About
     ==================================
     -->
 
@@ -109,7 +109,7 @@
 
     <!--
     ==================================
-                             Quickstart
+    Quickstart
     ==================================
     -->
 
@@ -202,7 +202,7 @@
 
     <!--
     ==================================
-                Shortcodes Button Area
+    Shortcodes Button Area
     ==================================
     -->
 
@@ -216,7 +216,7 @@
 
     <!--
     ==================================
-                            TECH STACK
+    Tech Stack
     ==================================
     -->
 
@@ -279,7 +279,7 @@
 
     <!--
     ==================================
-                            The Team
+    The Team
     ==================================
     -->
 
@@ -331,10 +331,9 @@
         </div>
     </div>
 
-
     <!--
     ==================================
-                            Scripts
+    Scripts
     ==================================
     -->
 
@@ -347,54 +346,6 @@
     <script type="text/javascript" src="js/jquery.hoverdir.js"></script>
     <script type="text/javascript" src="js/modernizr.custom.97074.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
-    <script type="text/javascript">
-        $(window).load(function () { // makes sure the whole site is loaded
-            $("#status").fadeOut(); // will first fade out the loading animation
-            $("#preloader").delay(350).fadeOut("slow"); // will fade out the white DIV that covers the website.
-        })
-
-        // Menu active class
-        ////Fade In/Out up_arrow
-        $(window).bind("scroll", function () {
-            if ($(this).scrollTop() > 750) {
-                $("#up_arrow").fadeIn();
-            } else {
-                $("#up_arrow").stop().fadeOut(1);
-            }
-        });
-        ////Fade In/Out up_arrow
-        $(window).bind("scroll", function () {
-            if ($(this).scrollTop() > 750) {
-                $("#down_arrow").css('disQuickstart', 'none');
-            } else {
-                $("#down_arrow").css('disQuickstart', 'block');
-            }
-        });
-        ////Fade Slide 1 Container
-        $('.serv, #testimonialsCarousel, #members, #subArea3 .container, .table').css('opacity', '0');
-        // call waypoint plugin
-        $('.serv, #testimonialsCarousel, #members, #subArea3the .container, .table').waypoint(function (event, direction) {
-            // do your fade in here
-            $(this).addClass('animated fadeInUp');
-        }, {
-            offset: '90%'
-        });
-
-        $('a').click(function (e) {
-            return true;
-        });
-        //Testimonial carousel
-        $('#testimonialsCarousel').carousel({
-            interval: 3000
-        })
-        // Team Icons
-        $('.member_social ul li img').mouseover(function () {
-            $(this).toggleClass('animated swing');
-        });
-        /// Wellcome Message
-        $(document).ready(function () {
-            $('#welcome_message').addClass('animated fadeInUp');
-        });
-    </script>
+    <script type="text/javascript" src="js/application.js"></script>
 </body>
 </html>
