--- a/index.html
+++ b/index.html
@@ -98,11 +98,15 @@
 
     <div class="about slide" id="slide2" data-section="2" data-stellar-background-ratio="0.5">
         <div class="container clearfix">
-            <!-- Page title and description-->
-
             <div class="row-fluid title">
-                <h1>Title</h1>
-                <h2>Peek behind the curtain...</h2>
+                <h1>About</h1>
+                <h2>Feel the experience at another level...</h2>
+                <div class="about-description">
+                    <p>Satellite Game is one of the first browser-based, multiplayer, WebGL space warfare game optimized for the <a href="http://www.oculusvr.com/" target="_blank">Oculus Rift</a>.</p>
+                    <p>Centered around moon bases and space stations, it has multiple game modes and non-player controller (NPC) artificial intelligence allowing single player mode as well.</p>
+                    <p>Oculus rift is a 3D full-immersion hardware and it's in development phase. Our team had early access to this techonology and developed this game which takes advantage of this innovation to create a great experience.</p>
+                </div>
+                <iframe class="oculus-video" width="640" height="360" src="http://www.youtube.com/embed/1QnXHe_MIx4?rel=0" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
