feature: made oculus rift video fluid

--- a/index.html
+++ b/index.html
@@ -106,7 +106,13 @@
                     <p>Centered around moon bases and space stations, it has multiple game modes and non-player controller (NPC) artificial intelligence allowing single player mode as well.</p>
                     <p>Oculus rift is a 3D full-immersion hardware and it's in development phase. Our team had early access to this techonology and developed this game which takes advantage of this innovation to create a great experience.</p>
                 </div>
-                <iframe class="oculus-video" width="640" height="360" src="http://www.youtube.com/embed/1QnXHe_MIx4?rel=0" frameborder="0" allowfullscreen></iframe>
+                <div class="oculus-video-wrapper">
+                    <div class="oculus-video">
+                        <div class="oculus-video-iframe-wrapper">
+                            <iframe src="http://www.youtube.com/embed/1QnXHe_MIx4?rel=0" frameborder="0" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
