feature: add learn how to play button on the end of about description

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                     <p>Satellite Game is one of the first browser-based, multiplayer, WebGL space warfare game optimized for the <a href="http://www.oculusvr.com/" target="_blank">Oculus Rift</a>.</p>
                     <p>Centered around moon bases and space stations, it has multiple game modes and non-player controller (NPC) artificial intelligence allowing single player mode as well.</p>
                     <p>Oculus rift is a 3D full-immersion hardware and it's in development phase. Our team had early access to this techonology and developed this game which takes advantage of this innovation to create a great experience.</p>
+                    <button class="button btn btn-list" data-section="3">Learn how to play</button>
                 </div>
                 <div class="oculus-video-wrapper">
                     <div class="oculus-video">
