feature: add basic structure for new team members

--- a/index.html
+++ b/index.html
@@ -301,46 +301,93 @@
                 <h2> Meet the creators </h2>
             </div>
             <div id="members" class="row-fluid">
+                <div class="team-member-row clearfix">
+                    <!--====== Brandon Cooper  ======-->
+                    <div class="team-member team-member-first">
+                        <a href="#" target="_blank">
+                            <img src="images/team/AndrewSpade.jpg" alt="image"  class="member_picture ">
+                            <h3 class="member_name">Brandon Cooper</h3>
+                            <p>Lorem Ipsum dolor simet</p>
+                        </a>
+                    </div>
 
-                <!--====== Andrew Spade ======-->
-                <div class="team-member span3">
-                    <a href="http://about.me/a.spade" target="_blank">
-                        <img src="images/team/AndrewSpade.jpg" alt="image"  class="member_picture ">
-                        <h3 class="member_name">Andrew Spade</h3>
-                        <p>Camera System, Environment Design, 3D Radar, Tactical Navigation Systems</p>
-                    </a>
-                </div>
+                    <!--====== Eric Hannum  ======-->
+                    <div class="team-member">
+                        <a href="#" target="_blank">
+                            <img src="images/team/AndrewSpade.jpg" alt="image"  class="member_picture ">
+                            <h3 class="member_name">Eric Hannum</h3>
+                            <p>Lorem Ipsum dolor simet</p>
+                        </a>
+                    </div>
 
-                <!--====== Gary Ryan ======-->
-                <div class="team-member span3">
-                    <a href="http://www.linkedin.com/in/garytryan" target="_blank">
-                        <img src="images/team/GaryRyan.jpg" alt="image"  class="member_picture">
-                        <h3  class="member_name">Gary Ryan</h3>
-                        <p>Combat Mechanics, Weapon Design, Lighting, Particle Systems, Pyrotechnics.</p>
-                    </a>
-                </div>
+                    <!--====== Andrew Lu  ======-->
+                    <div class="team-member">
+                        <a href="#" target="_blank">
+                            <img src="images/team/AndrewSpade.jpg" alt="image"  class="member_picture ">
+                            <h3 class="member_name">Andrew Lu</h3>
+                            <p>Lorem Ipsum dolor simet</p>
+                        </a>
+                    </div>
 
-                <!--====== Felix Tripier ======-->
-                <div class="team-member span3">
-                    <a href="http://www.linkedin.com/pub/felix-tripier/70/2b/a35/" target="_blank">
-                        <img src="images/team/FelixTrepier.jpg" alt="image"  class="member_picture">
-                        <h3  class="member_name">Felix Tripier</h3>
-                        <p>HUD, Flight Controls, Game Logic, Multiplayer Support, Audio Design</p>
-                    </a>
-                </div>
+                    <!--====== Joao Stein ======-->
+                    <div class="team-member">
+                        <a href="#" target="_blank">
+                            <img src="images/team/AndrewSpade.jpg" alt="image"  class="member_picture ">
+                            <h3 class="member_name">Joao Stein</h3>
+                            <p>Lorem Ipsum dolor simet</p>
+                        </a>
+                    </div>
 
-                <!--====== Phillip Alexander ======-->
-                <div class="team-member span3">
-                    <a href="http://phillipalexander.io" target="_blank">
-                        <img src="images/team/PhillipAlexander.jpg" alt="image"  class="member_picture">
-                        <h3  class="member_name">Phillip Alexander</h3>
-                        <p>Team Lead, Client-Server Architecture, Build Automation, Website Design</p>
-                    </a>
-                </div>
+                    <!--====== Sam Stites ======-->
+                    <div class="team-member">
+                        <a href="#" target="_blank">
+                            <img src="images/team/AndrewSpade.jpg" alt="image"  class="member_picture ">
+                            <h3 class="member_name">Sam Stites</h3>
+                            <p>Lorem Ipsum dolor simet</p>
+                        </a>
+                    </div>
+                </div> <!-- .team-member-row -->
 
-            </div>
-        </div>
-    </div>
+                <div class="team-member-row clearfix">
+                    <!--====== Andrew Spade ======-->
+                    <div class="team-member team-member-first">
+                        <a href="http://about.me/a.spade" target="_blank">
+                            <img src="images/team/AndrewSpade.jpg" alt="image"  class="member_picture ">
+                            <h3 class="member_name">Andrew Spade</h3>
+                            <p>Camera System, Environment Design, 3D Radar, Tactical Navigation Systems</p>
+                        </a>
+                    </div>
+
+                    <!--====== Gary Ryan ======-->
+                    <div class="team-member">
+                        <a href="http://www.linkedin.com/in/garytryan" target="_blank">
+                            <img src="images/team/GaryRyan.jpg" alt="image"  class="member_picture">
+                            <h3  class="member_name">Gary Ryan</h3>
+                            <p>Combat Mechanics, Weapon Design, Lighting, Particle Systems, Pyrotechnics.</p>
+                        </a>
+                    </div>
+
+                    <!--====== Felix Tripier ======-->
+                    <div class="team-member">
+                        <a href="http://www.linkedin.com/pub/felix-tripier/70/2b/a35/" target="_blank">
+                            <img src="images/team/FelixTrepier.jpg" alt="image"  class="member_picture">
+                            <h3  class="member_name">Felix Tripier</h3>
+                            <p>HUD, Flight Controls, Game Logic, Multiplayer Support, Audio Design</p>
+                        </a>
+                    </div>
+
+                    <!--====== Phillip Alexander ======-->
+                    <div class="team-member">
+                        <a href="http://phillipalexander.io" target="_blank">
+                            <img src="images/team/PhillipAlexander.jpg" alt="image"  class="member_picture">
+                            <h3  class="member_name">Phillip Alexander</h3>
+                            <p>Team Lead, Client-Server Architecture, Build Automation, Website Design</p>
+                        </a>
+                    </div>
+                </div> <!-- .team-member-row -->
+            </div> <!-- #members -->
+        </div> <!-- .container -->
+    </div> <!-- .team -->
 
     <!--
     ==================================
