--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<link href='http://fonts.googleapis.com/css?family=Lato:300,400,300italic' rel='stylesheet' type='text/css'>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale = 1.0, user-scalable = no">
 <link rel="icon"  type="image/png"  href="images/favicon.png">
 <title>Satellite</title>
 
 <!--====== CSS Files ======-->
-<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="screen">
-<link rel="stylesheet" href="css/bootstrap-responsive.min.css" type="text/css" media="screen">
-<link rel="stylesheet" href="css/style.css" type="text/css">
-<link rel="stylesheet" type="text/css" href="css/animate.css">
+<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato:300,400,300italic'>
+<link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="css/bootstrap-responsive.min.css">
+<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/animate.css">
 
 <!--====== Google Analytics (with https://github.com/CardinalPath/gas)======-->
 <script type="text/javascript">
