feature(menu): update play button to use a btn-medium class and maintain the default gray color

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </a>
 
                     <!-- Everything you want hidden at 940px or less, place within here -->
-                    <a href="http://app.satellite-game.com"><button class="btn btn-info">Play Now!</button></a>
+                    <a href="http://app.satellite-game.com"><button class="btn btn-medium">Play Now!</button></a>
 
                     <ul class="navigation">
                         <li data-section="1" data-toggle="collapse" data-target=".nav-collapse">Home</li>
